src/sidecar/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar-injector-webhook-svc
  labels:
    app: sidecar-injector
spec:
  ports:
  - port: 443
    targetPort: 443
    name: https
  - port: 9191
    targetPort: 9191
    name: http
  selector:
    app: sidecar-injector
