src/sidecar/k8/test.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar-injector-webhook.morven.me/inject: "yes"
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: openresty/openresty:1.15.8.2-4-centos
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9292
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      targetPort: 9292
      name: http
  selector:
    app: nginx
