src/sidecar/k8/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: sidecar-injector-webhook-cfg
  labels:
    app: sidecar-injector
webhooks:
  - name: sidecar-injector.morven.me
    clientConfig:
      service:
        name: sidecar-injector-webhook-svc
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFNU1UQXlNREV3TXpVek1Wb1hEVEk1TVRBeE9ERXdNelV6TVZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTkdBCkJVbm44dExuVGhLdTVVenl6K1F6ZlBBL0FQYWNZZmNoeVdLWjA4SkhIZGVmbEpBdTN0bDdZWGphbk9DQ2JCZTMKZWQ1bHFUOTA0NWE2STIrK2s2OVVhRDRnajNiVmtKVXFQNll5N2plOWZYckFlaXZ2SlIvWjZnQ2Q0akdRUm9rQwo4TjUxK2g5WnBU [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        sidecar-injector: enabled
